fix: remove unused file and fix problem with merge dev